--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,12 @@ authors:
     web: https://www.wowthemes.net
     twitter: https://twitter.com/wowthemesnet
     description: "This is the author box. Write a short description of the author here. You are currently previewing Mediumish demo, a Jekyll template compatible with Github pages."
+  daniel:
+    name: Daniel
+    display_name: Daniel
+    gravatar: https://avatars.githubusercontent.com/u/901647?s=96&v=4
+    web: https://github.com/yellowcap
+    description: "Former CTO of Tesselo"
 
 # Plugins
 plugins:
