fix(config): typo in remi's description

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ authors:
     avatar: 'assets/images/remi.jpg'
     web: https://pt.linkedin.com/in/remicharpentier
     twitter: https://pt.linkedin.com/in/remicharpentier
-    description: "Co-Founder and CEO of Tesselo. Has helped building the buisness side of Tesselo by turning satellite imagery and artificial intelligence into environmental and business insights. "
+    description: "Co-Founder and CEO of Tesselo. Has helped building the business side of Tesselo by turning satellite imagery and artificial intelligence into environmental and business insights. "
 
   daniel:
     name: Daniel
